--- a/Resources/Resource.qrc
+++ b/Resources/Resource.qrc
@@ -44,5 +44,6 @@
         <file>svg/threeview.svg</file>
         <file>svg/volumeview.svg</file>
         <file>svg/link.svg</file>
+        <file>svg/imagequality.svg</file>
     </qresource>
 </RCC>
