Support displaying three views

--- a/Resources/Resource.qrc
+++ b/Resources/Resource.qrc
@@ -47,5 +47,6 @@
         <file>svg/imagequality.svg</file>
         <file>svg/fitwindow.svg</file>
         <file>svg/location.svg</file>
+        <file>svg/fourview.svg</file>
     </qresource>
 </RCC>
